--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0",
     "vlucas/phpdotenv": "^5.4",
     "ext-pdo": "*",
-    "ext-json": "*"
+    "ext-json": "*",
+    "skrtdev/novagram": "^1.9"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
